# SweepingRobot

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp
test/: CMakeLists.txt  solution_test.cpp
